--- a/tasks/Find Cell Type Count/Find Cell Type Count.ipynb
+++ b/tasks/Find Cell Type Count/Find Cell Type Count.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,23 +45,15 @@
     "\n",
     "Let's not worry about `per_page`; we won't be needing it for this. For `replica`, we'll be using AWS, and for `output_format`, we'll want to use the mode `raw`. Using `raw` will return get the verbatim JSON metadata for bundles that match our query, which we'll need in order to view details on the organ type.\n",
     "\n",
-    "Assuming we don't know how to find the fields for our ElasticSearch query, we'll start by looking for them first. Our query should find all bundles that have an _organ type_ of hematopoietic system, a _schema version_ of 5.1.0, and _at least one cell_ in the sample. In the end, it should look something like this:"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
+    "Assuming we don't know how to find the fields for our ElasticSearch query, we'll start by looking for them first. Our query should find all bundles that have both an _organ type_ of hematopoietic system and _at least one cell_ in the sample. In the end, it should look something like this:\n",
+    "\n",
+    "```json\n",
     "query = {\n",
     "    \"query\" : {\n",
     "        \"bool\" : {\n",
     "            \"must\" : [{\n",
     "                \"match\" : {\n",
     "                    \"some.path.to.the.organ.type\" : organ_type\n",
-    "                }\n",
-    "            }, {\n",
-    "                \"match\" : {\n",
-    "                    \"some.path.to.the.schema.type\" : \"5.1.0\"\n",
     "                }\n",
     "            }, {\n",
     "                \"range\" : {\n",
@@ -72,19 +64,15 @@
     "            }]\n",
     "        }\n",
     "    }\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "}\n",
+    "```\n",
+    "\n",
     "To find these fields, we can examine a bundle -- _any_ bundle containing what we need -- in its `raw` form. Let's do a search over everything to find one."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +159,7 @@
        " 'search_score': 1.0}"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +640,7 @@
        " 'search_score': 1.0}"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -665,12 +653,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There we go! It's not very pretty, but now that we know where the `total_estimated_cells`, `schema_version`, and `organ` fields lie, we can finish our ElasticSearch query."
+    "There we go! It's not very pretty, but now that we know where the `total_estimated_cells` and `organ` fields lie, we can finish our ElasticSearch query."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -680,10 +668,6 @@
     "            \"must\" : [{\n",
     "                \"match\" : {\n",
     "                    \"files.biomaterial_json.biomaterials.content.organ.text\" : organ_type\n",
-    "                }\n",
-    "            }, {\n",
-    "                \"match\" : {\n",
-    "                    \"files.biomaterial_json.schema_version\" : \"5.1.0\"\n",
     "                }\n",
     "            }, {\n",
     "                \"range\" : {\n",
@@ -706,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -715,7 +699,7 @@
        "4"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -728,12 +712,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Great, we got something. It looks like we have 4 bundles with schema version 5.1.0, containing at least one hematopoietic system cell."
+    "Great, we got something. It looks like we have 4 bundles containing at least one hematopoietic system cell. Now we just need to add them up."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 15,
    "metadata": {
     "scrolled": false
    },
@@ -780,7 +764,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
